--- a/pruebas1/pruebas1.csproj
+++ b/pruebas1/pruebas1.csproj
@@ -11,7 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
+    <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.13" />
+    <PackageReference Include="Refit" Version="6.3.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="NETStandard.Library" />
+    <None Remove="Microsoft.NETCore.UniversalWindowsPlatform" />
+    <None Remove="Refit" />
   </ItemGroup>
 </Project>
